@@ -1,3 +1,9 @@
+2011-03-30  Ian Piumarta  <piumarta@freebsd.piumarta.com>
+
+	* plugins/FloatMathPlugin/config.cmake: Re-enable GCC optimisations.
+
+	* vm/sqUnixExternalPrims.c: Resolve symbols lazily on FreeBSD.
+
 2011-03-14  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
 
 	* plugins/SerialPlugin/sqUnixSerial.c (portOpenFailed): Ensure
